--- a/sqlite3test/build.gradle
+++ b/sqlite3test/build.gradle
@@ -37,8 +37,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation project(':sqlite3')
 //    implementation project(path: ':sqlite3', configuration: 'debug')
